// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-001: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Bính",
      "canIndex": 2,
      "chi": "Tý",
      "chiIndex": 0,
    },
    "hourPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Ngọ",
      "chiIndex": 6,
    },
    "lunar": "21/7/1980",
    "monthPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Thân",
      "chiIndex": 8,
    },
    "yearCanChi": "Canh Thân",
    "yearPillar": {
      "can": "Canh",
      "canIndex": 6,
      "chi": "Thân",
      "chiIndex": 8,
    },
  },
  "cuc": {
    "banMenhNapAm": "Thạch Lựu Mộc",
    "cucName": "Thổ Ngũ Cục",
    "cucSo": 5,
  },
  "cungs": [
    {
      "can": "Mậu",
      "chi": "Tý",
      "chinhTinh": [
        "Thất Sát(Miếu)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        105,
        114,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Quan Phù",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Kỷ",
      "chi": "Sửu",
      "chinhTinh": [],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        115,
        124,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hỷ",
      ],
      "thaiTue": "Tử Phù",
      "trangSinh": "Suy",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Mậu",
      "chi": "Dần",
      "chinhTinh": [
        "Liêm Trinh(Vượng)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        5,
        14,
      ],
      "isMenh": true,
      "isThan": true,
      "phuTinh": [
        "Thiên Việt",
        "Thiên Mã",
      ],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Bệnh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Kỷ",
      "chi": "Mão",
      "chinhTinh": [],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        15,
        24,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hình",
      ],
      "thaiTue": "Long Đức",
      "trangSinh": "Tử",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Canh",
      "chi": "Thìn",
      "chinhTinh": [
        "Phá Quân(Đắc)",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        25,
        34,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Văn Xương",
        "Linh Tinh",
      ],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Mộ",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Tỵ",
      "chinhTinh": [
        "Thiên Đồng(Đắc)+Kỵ",
      ],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        35,
        44,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Địa Kiếp",
        "Địa Không",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Tuyệt",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Ngọ",
      "chinhTinh": [
        "Vũ Khúc(Vượng)+Quyền",
        "Thiên Phủ(Miếu)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        45,
        54,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Thai",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mùi",
      "chinhTinh": [
        "Thái Dương(Đắc)+Lộc",
        "Thái Âm(Đắc)+Khoa",
      ],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        55,
        64,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Hồng Loan",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Trực Phù",
      "trangSinh": "Dưỡng",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thân",
      "chinhTinh": [
        "Tham Lang(Đắc)",
      ],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        65,
        74,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Lộc Tồn",
        "Hỏa Tinh",
      ],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Dậu",
      "chinhTinh": [
        "Thiên Cơ(Miếu)",
        "Cự Môn(Miếu)",
      ],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        75,
        84,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Kình Dương",
        "Đào Hoa",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Mộc Dục",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Tuất",
      "chinhTinh": [
        "Tử Vi(Vượng)",
        "Thiên Tướng(Vượng)",
      ],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        85,
        94,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Văn Khúc",
      ],
      "thaiTue": "Tang Môn",
      "trangSinh": "Quan Đới",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Đinh",
      "chi": "Hợi",
      "chinhTinh": [
        "Thiên Lương(Hãm)",
      ],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        95,
        104,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": false,
    },
  ],
  "menhThan": {
    "amDuongNam": "Dương Nam",
    "chuMenh": "Liêm Trinh",
    "chuThan": "Thiên Lương",
    "menhChiIndex": 2,
    "menhQuai": "Khôn",
    "thanChiIndex": 2,
  },
  "tuHoa": {
    "khoa": "Thái Âm",
    "ky": "Thiên Đồng",
    "loc": "Thái Dương",
    "quyen": "Vũ Khúc",
  },
}
`;

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-002: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Bính",
      "canIndex": 2,
      "chi": "Tý",
      "chiIndex": 0,
    },
    "hourPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Ngọ",
      "chiIndex": 6,
    },
    "lunar": "21/7/1980",
    "monthPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Thân",
      "chiIndex": 8,
    },
    "yearCanChi": "Canh Thân",
    "yearPillar": {
      "can": "Canh",
      "canIndex": 6,
      "chi": "Thân",
      "chiIndex": 8,
    },
  },
  "cuc": {
    "banMenhNapAm": "Thạch Lựu Mộc",
    "cucName": "Thổ Ngũ Cục",
    "cucSo": 5,
  },
  "cungs": [
    {
      "can": "Mậu",
      "chi": "Tý",
      "chinhTinh": [
        "Thất Sát(Miếu)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        25,
        34,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Quan Phù",
      "trangSinh": "Mộ",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Kỷ",
      "chi": "Sửu",
      "chinhTinh": [],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        15,
        24,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hỷ",
      ],
      "thaiTue": "Tử Phù",
      "trangSinh": "Tử",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Mậu",
      "chi": "Dần",
      "chinhTinh": [
        "Liêm Trinh(Vượng)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        5,
        14,
      ],
      "isMenh": true,
      "isThan": true,
      "phuTinh": [
        "Thiên Việt",
        "Thiên Mã",
      ],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Bệnh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Kỷ",
      "chi": "Mão",
      "chinhTinh": [],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        115,
        124,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hình",
      ],
      "thaiTue": "Long Đức",
      "trangSinh": "Suy",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Canh",
      "chi": "Thìn",
      "chinhTinh": [
        "Phá Quân(Đắc)",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        105,
        114,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Văn Xương",
        "Linh Tinh",
      ],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Tỵ",
      "chinhTinh": [
        "Thiên Đồng(Đắc)+Kỵ",
      ],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        95,
        104,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Địa Kiếp",
        "Địa Không",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Ngọ",
      "chinhTinh": [
        "Vũ Khúc(Vượng)+Quyền",
        "Thiên Phủ(Miếu)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        85,
        94,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Quan Đới",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mùi",
      "chinhTinh": [
        "Thái Dương(Đắc)+Lộc",
        "Thái Âm(Đắc)+Khoa",
      ],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        75,
        84,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Kình Dương",
        "Hồng Loan",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Trực Phù",
      "trangSinh": "Mộc Dục",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thân",
      "chinhTinh": [
        "Tham Lang(Đắc)",
      ],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        65,
        74,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Lộc Tồn",
        "Hỏa Tinh",
      ],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Dậu",
      "chinhTinh": [
        "Thiên Cơ(Miếu)",
        "Cự Môn(Miếu)",
      ],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        55,
        64,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Đào Hoa",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Dưỡng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Tuất",
      "chinhTinh": [
        "Tử Vi(Vượng)",
        "Thiên Tướng(Vượng)",
      ],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        45,
        54,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Văn Khúc",
      ],
      "thaiTue": "Tang Môn",
      "trangSinh": "Thai",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Đinh",
      "chi": "Hợi",
      "chinhTinh": [
        "Thiên Lương(Hãm)",
      ],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        35,
        44,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Tuyệt",
      "triet": false,
      "tuan": false,
    },
  ],
  "menhThan": {
    "amDuongNam": "Dương Nữ",
    "chuMenh": "Liêm Trinh",
    "chuThan": "Thiên Lương",
    "menhChiIndex": 2,
    "menhQuai": "Tốn",
    "thanChiIndex": 2,
  },
  "tuHoa": {
    "khoa": "Thái Âm",
    "ky": "Thiên Đồng",
    "loc": "Thái Dương",
    "quyen": "Vũ Khúc",
  },
}
`;

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-003: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Nhâm",
      "canIndex": 8,
      "chi": "Tuất",
      "chiIndex": 10,
    },
    "hourPillar": {
      "can": "Bính",
      "canIndex": 2,
      "chi": "Ngọ",
      "chiIndex": 6,
    },
    "lunar": "6/7/1990",
    "monthPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Thân",
      "chiIndex": 8,
    },
    "yearCanChi": "Canh Ngọ",
    "yearPillar": {
      "can": "Canh",
      "canIndex": 6,
      "chi": "Ngọ",
      "chiIndex": 6,
    },
  },
  "cuc": {
    "banMenhNapAm": "Lộ Bàng Thổ",
    "cucName": "Thổ Ngũ Cục",
    "cucSo": 5,
  },
  "cungs": [
    {
      "can": "Mậu",
      "chi": "Tý",
      "chinhTinh": [
        "Cự Môn(Vượng)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        105,
        114,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Kỷ",
      "chi": "Sửu",
      "chinhTinh": [
        "Thiên Tướng(Đắc)",
      ],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        115,
        124,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Long Đức",
      "trangSinh": "Suy",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Mậu",
      "chi": "Dần",
      "chinhTinh": [
        "Thiên Đồng(Miếu)+Kỵ",
        "Thiên Lương(Vượng)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        5,
        14,
      ],
      "isMenh": true,
      "isThan": true,
      "phuTinh": [
        "Thiên Việt",
      ],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Bệnh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Kỷ",
      "chi": "Mão",
      "chinhTinh": [
        "Vũ Khúc(Đắc)+Quyền",
        "Thất Sát(Hãm)",
      ],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        15,
        24,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đào Hoa",
        "Thiên Hỷ",
        "Thiên Hình",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Tử",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Canh",
      "chi": "Thìn",
      "chinhTinh": [
        "Thái Dương(Vượng)+Lộc",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        25,
        34,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Văn Xương",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Mộ",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Tỵ",
      "chinhTinh": [],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        35,
        44,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Địa Kiếp",
        "Địa Không",
      ],
      "thaiTue": "Trực Phù",
      "trangSinh": "Tuyệt",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Ngọ",
      "chinhTinh": [
        "Thiên Cơ(Đắc)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        45,
        54,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
      ],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Thai",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mùi",
      "chinhTinh": [
        "Tử Vi(Đắc)",
        "Phá Quân(Vượng)",
      ],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        55,
        64,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Hỏa Tinh",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Dưỡng",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thân",
      "chinhTinh": [],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        65,
        74,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Lộc Tồn",
        "Thiên Mã",
      ],
      "thaiTue": "Tang Môn",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Dậu",
      "chinhTinh": [
        "Thiên Phủ(Bình)",
      ],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        75,
        84,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Kình Dương",
        "Linh Tinh",
        "Hồng Loan",
      ],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Mộc Dục",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Tuất",
      "chinhTinh": [
        "Thái Âm(Miếu)+Khoa",
      ],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        85,
        94,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Văn Khúc",
      ],
      "thaiTue": "Quan Phù",
      "trangSinh": "Quan Đới",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Đinh",
      "chi": "Hợi",
      "chinhTinh": [
        "Liêm Trinh(Hãm)",
        "Tham Lang(Hãm)",
      ],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        95,
        104,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Tử Phù",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": true,
    },
  ],
  "menhThan": {
    "amDuongNam": "Dương Nam",
    "chuMenh": "Phá Quân",
    "chuThan": "Hỏa Tinh",
    "menhChiIndex": 2,
    "menhQuai": "Khảm",
    "thanChiIndex": 2,
  },
  "tuHoa": {
    "khoa": "Thái Âm",
    "ky": "Thiên Đồng",
    "loc": "Thái Dương",
    "quyen": "Vũ Khúc",
  },
}
`;

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-004: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Kỷ",
      "canIndex": 5,
      "chi": "Hợi",
      "chiIndex": 11,
    },
    "hourPillar": {
      "can": "Canh",
      "canIndex": 6,
      "chi": "Ngọ",
      "chiIndex": 6,
    },
    "lunar": "23/7/1997",
    "monthPillar": {
      "can": "Mậu",
      "canIndex": 4,
      "chi": "Thân",
      "chiIndex": 8,
    },
    "yearCanChi": "Đinh Sửu",
    "yearPillar": {
      "can": "Đinh",
      "canIndex": 3,
      "chi": "Sửu",
      "chiIndex": 1,
    },
  },
  "cuc": {
    "banMenhNapAm": "Giản Hạ Thủy",
    "cucName": "Kim Tứ Cục",
    "cucSo": 4,
  },
  "cungs": [
    {
      "can": "Nhâm",
      "chi": "Tý",
      "chinhTinh": [
        "Tham Lang(Hãm)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        104,
        113,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Trực Phù",
      "trangSinh": "Tử",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Sửu",
      "chinhTinh": [
        "Thiên Đồng(Hãm)+Quyền",
        "Cự Môn(Hãm)+Kỵ",
      ],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        114,
        123,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Mộ",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Dần",
      "chinhTinh": [
        "Vũ Khúc(Vượng)",
        "Thiên Tướng(Miếu)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        4,
        13,
      ],
      "isMenh": true,
      "isThan": true,
      "phuTinh": [
        "Hồng Loan",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Tuyệt",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mão",
      "chinhTinh": [
        "Thái Dương(Vượng)",
        "Thiên Lương(Vượng)",
      ],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        14,
        23,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hình",
      ],
      "thaiTue": "Tang Môn",
      "trangSinh": "Thai",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thìn",
      "chinhTinh": [
        "Thất Sát(Hãm)",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        24,
        33,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Văn Xương",
        "Linh Tinh",
      ],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Dưỡng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Tỵ",
      "chinhTinh": [
        "Thiên Cơ(Vượng)+Khoa",
      ],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        34,
        43,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Địa Kiếp",
        "Địa Không",
      ],
      "thaiTue": "Quan Phù",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Ngọ",
      "chinhTinh": [
        "Tử Vi(Miếu)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        44,
        53,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Lộc Tồn",
        "Đào Hoa",
      ],
      "thaiTue": "Tử Phù",
      "trangSinh": "Mộc Dục",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Đinh",
      "chi": "Mùi",
      "chinhTinh": [],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        54,
        63,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Kình Dương",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Quan Đới",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Mậu",
      "chi": "Thân",
      "chinhTinh": [
        "Phá Quân(Hãm)",
      ],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        64,
        73,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Hỷ",
      ],
      "thaiTue": "Long Đức",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Kỷ",
      "chi": "Dậu",
      "chinhTinh": [],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        74,
        83,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Việt",
        "Hỏa Tinh",
      ],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Canh",
      "chi": "Tuất",
      "chinhTinh": [
        "Liêm Trinh(Miếu)",
        "Thiên Phủ(Vượng)",
      ],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        84,
        93,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Văn Khúc",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Suy",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Hợi",
      "chinhTinh": [
        "Thái Âm(Miếu)+Lộc",
      ],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        94,
        103,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
        "Thiên Mã",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Bệnh",
      "triet": false,
      "tuan": false,
    },
  ],
  "menhThan": {
    "amDuongNam": "Âm Nữ",
    "chuMenh": "Cự Môn",
    "chuThan": "Thiên Tướng",
    "menhChiIndex": 2,
    "menhQuai": "Chấn",
    "thanChiIndex": 2,
  },
  "tuHoa": {
    "khoa": "Thiên Cơ",
    "ky": "Cự Môn",
    "loc": "Thái Âm",
    "quyen": "Thiên Đồng",
  },
}
`;

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-005: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Kỷ",
      "canIndex": 5,
      "chi": "Hợi",
      "chiIndex": 11,
    },
    "hourPillar": {
      "can": "Giáp",
      "canIndex": 0,
      "chi": "Tý",
      "chiIndex": 0,
    },
    "lunar": "23/7/1997",
    "monthPillar": {
      "can": "Mậu",
      "canIndex": 4,
      "chi": "Thân",
      "chiIndex": 8,
    },
    "yearCanChi": "Đinh Sửu",
    "yearPillar": {
      "can": "Đinh",
      "canIndex": 3,
      "chi": "Sửu",
      "chiIndex": 1,
    },
  },
  "cuc": {
    "banMenhNapAm": "Giản Hạ Thủy",
    "cucName": "Thổ Ngũ Cục",
    "cucSo": 5,
  },
  "cungs": [
    {
      "can": "Nhâm",
      "chi": "Tý",
      "chinhTinh": [
        "Liêm Trinh(Vượng)",
        "Thiên Tướng(Vượng)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        85,
        94,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Trực Phù",
      "trangSinh": "Mộ",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Sửu",
      "chinhTinh": [
        "Thiên Lương(Đắc)",
      ],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        75,
        84,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Tử",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Dần",
      "chinhTinh": [
        "Thất Sát(Miếu)",
      ],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        65,
        74,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hồng Loan",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Bệnh",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mão",
      "chinhTinh": [
        "Thiên Đồng(Đắc)+Quyền",
      ],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        55,
        64,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hỏa Tinh",
        "Thiên Hình",
      ],
      "thaiTue": "Tang Môn",
      "trangSinh": "Suy",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thìn",
      "chinhTinh": [
        "Vũ Khúc(Miếu)",
      ],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        45,
        54,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Văn Khúc",
      ],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Tỵ",
      "chinhTinh": [
        "Thái Dương(Miếu)",
      ],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        35,
        44,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Kình Dương",
      ],
      "thaiTue": "Quan Phù",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Ngọ",
      "chinhTinh": [
        "Phá Quân(Miếu)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        25,
        34,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Lộc Tồn",
        "Đào Hoa",
      ],
      "thaiTue": "Tử Phù",
      "trangSinh": "Quan Đới",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Đinh",
      "chi": "Mùi",
      "chinhTinh": [
        "Thiên Cơ(Đắc)+Khoa",
      ],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        15,
        24,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Mộc Dục",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Mậu",
      "chi": "Thân",
      "chinhTinh": [
        "Tử Vi(Miếu)",
        "Thiên Phủ(Miếu)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        5,
        14,
      ],
      "isMenh": true,
      "isThan": true,
      "phuTinh": [
        "Thiên Hỷ",
      ],
      "thaiTue": "Long Đức",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Kỷ",
      "chi": "Dậu",
      "chinhTinh": [
        "Thái Âm(Miếu)+Lộc",
      ],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        115,
        124,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Việt",
      ],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Dưỡng",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Canh",
      "chi": "Tuất",
      "chinhTinh": [
        "Tham Lang(Vượng)",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        105,
        114,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Văn Xương",
        "Linh Tinh",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Thai",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Hợi",
      "chinhTinh": [
        "Cự Môn(Đắc)+Kỵ",
      ],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        95,
        104,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
        "Địa Kiếp",
        "Địa Không",
        "Thiên Mã",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Tuyệt",
      "triet": false,
      "tuan": false,
    },
  ],
  "menhThan": {
    "amDuongNam": "Âm Nam",
    "chuMenh": "Cự Môn",
    "chuThan": "Thiên Tướng",
    "menhChiIndex": 8,
    "menhQuai": "Chấn",
    "thanChiIndex": 8,
  },
  "tuHoa": {
    "khoa": "Thiên Cơ",
    "ky": "Cự Môn",
    "loc": "Thái Âm",
    "quyen": "Thiên Đồng",
  },
}
`;

exports[`Phase 31 — Regression snapshot baseline (GM-001 → GM-006) > GM-006: đóng băng toàn bộ Natal Core output (Calendar/4 trụ/Mệnh/Thân/Cục/12 cung/Can cung/14 chính tinh/status/Tứ Hóa/Tuần/Triệt/Đại Vận/phụ tinh/vòng sao) 1`] = `
{
  "calendar": {
    "dayPillar": {
      "can": "Kỷ",
      "canIndex": 5,
      "chi": "Dậu",
      "chiIndex": 9,
    },
    "hourPillar": {
      "can": "Ất",
      "canIndex": 1,
      "chi": "Sửu",
      "chiIndex": 1,
    },
    "lunar": "17/12/2025",
    "monthPillar": {
      "can": "Kỷ",
      "canIndex": 5,
      "chi": "Sửu",
      "chiIndex": 1,
    },
    "yearCanChi": "Ất Tỵ",
    "yearPillar": {
      "can": "Ất",
      "canIndex": 1,
      "chi": "Tỵ",
      "chiIndex": 5,
    },
  },
  "cuc": {
    "banMenhNapAm": "Phú Đăng Hỏa",
    "cucName": "Hỏa Lục Cục",
    "cucSo": 6,
  },
  "cungs": [
    {
      "can": "Mậu",
      "chi": "Tý",
      "chinhTinh": [
        "Thái Dương(Hãm)",
      ],
      "cung": "Mệnh",
      "daiVanTuoi": [
        6,
        15,
      ],
      "isMenh": true,
      "isThan": false,
      "phuTinh": [
        "Thiên Khôi",
        "Địa Kiếp",
        "Thiên Diêu",
        "Thiên Y",
      ],
      "thaiTue": "Long Đức",
      "trangSinh": "Quan Đới",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Kỷ",
      "chi": "Sửu",
      "chinhTinh": [
        "Thiên Phủ(Bình)",
      ],
      "cung": "Phụ Mẫu",
      "daiVanTuoi": [
        116,
        125,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Bạch Hổ",
      "trangSinh": "Mộc Dục",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Mậu",
      "chi": "Dần",
      "chinhTinh": [
        "Thiên Cơ(Hãm)+Lộc",
        "Thái Âm(Hãm)+Kỵ",
      ],
      "cung": "Phúc Đức",
      "daiVanTuoi": [
        106,
        115,
      ],
      "isMenh": false,
      "isThan": true,
      "phuTinh": [
        "Kình Dương",
      ],
      "thaiTue": "Phúc Đức",
      "trangSinh": "Tràng Sinh",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Kỷ",
      "chi": "Mão",
      "chinhTinh": [
        "Tử Vi(Bình)+Khoa",
        "Tham Lang(Hãm)",
      ],
      "cung": "Điền Trạch",
      "daiVanTuoi": [
        96,
        105,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Tả Phù",
        "Lộc Tồn",
      ],
      "thaiTue": "Điếu Khách",
      "trangSinh": "Dưỡng",
      "triet": false,
      "tuan": true,
    },
    {
      "can": "Canh",
      "chi": "Thìn",
      "chinhTinh": [
        "Cự Môn(Hãm)",
      ],
      "cung": "Quan Lộc",
      "daiVanTuoi": [
        86,
        95,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đà La",
        "Hỏa Tinh",
        "Thiên Hỷ",
      ],
      "thaiTue": "Trực Phù",
      "trangSinh": "Thai",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Tân",
      "chi": "Tỵ",
      "chinhTinh": [
        "Thiên Tướng(Đắc)",
      ],
      "cung": "Nô Bộc",
      "daiVanTuoi": [
        76,
        85,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Văn Khúc",
      ],
      "thaiTue": "Thái Tuế",
      "trangSinh": "Tuyệt",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Nhâm",
      "chi": "Ngọ",
      "chinhTinh": [
        "Thiên Lương(Miếu)+Quyền",
      ],
      "cung": "Thiên Di",
      "daiVanTuoi": [
        66,
        75,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Đào Hoa",
      ],
      "thaiTue": "Thiếu Dương",
      "trangSinh": "Mộ",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Quý",
      "chi": "Mùi",
      "chinhTinh": [
        "Liêm Trinh(Đắc)",
        "Thất Sát(Đắc)",
      ],
      "cung": "Tật Ách",
      "daiVanTuoi": [
        56,
        65,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [],
      "thaiTue": "Tang Môn",
      "trangSinh": "Tử",
      "triet": true,
      "tuan": false,
    },
    {
      "can": "Giáp",
      "chi": "Thân",
      "chinhTinh": [],
      "cung": "Tài Bạch",
      "daiVanTuoi": [
        46,
        55,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Thiên Việt",
        "Thiên Hình",
      ],
      "thaiTue": "Thiếu Âm",
      "trangSinh": "Bệnh",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Ất",
      "chi": "Dậu",
      "chinhTinh": [],
      "cung": "Tử Tức",
      "daiVanTuoi": [
        36,
        45,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Văn Xương",
      ],
      "thaiTue": "Quan Phù",
      "trangSinh": "Suy",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Bính",
      "chi": "Tuất",
      "chinhTinh": [
        "Thiên Đồng(Hãm)",
      ],
      "cung": "Phu Thê",
      "daiVanTuoi": [
        26,
        35,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Địa Không",
        "Hồng Loan",
      ],
      "thaiTue": "Tử Phù",
      "trangSinh": "Đế Vượng",
      "triet": false,
      "tuan": false,
    },
    {
      "can": "Đinh",
      "chi": "Hợi",
      "chinhTinh": [
        "Vũ Khúc(Hãm)",
        "Phá Quân(Hãm)",
      ],
      "cung": "Huynh Đệ",
      "daiVanTuoi": [
        16,
        25,
      ],
      "isMenh": false,
      "isThan": false,
      "phuTinh": [
        "Hữu Bật",
        "Thiên Mã",
        "Linh Tinh",
      ],
      "thaiTue": "Tuế Phá",
      "trangSinh": "Lâm Quan",
      "triet": false,
      "tuan": false,
    },
  ],
  "menhThan": {
    "amDuongNam": "Âm Nam",
    "chuMenh": "Vũ Khúc",
    "chuThan": "Thiên Cơ",
    "menhChiIndex": 0,
    "menhQuai": "Khôn",
    "thanChiIndex": 2,
  },
  "tuHoa": {
    "khoa": "Tử Vi",
    "ky": "Thái Âm",
    "loc": "Thiên Cơ",
    "quyen": "Thiên Lương",
  },
}
`;
